[package]
name = "app"
version = "0.1.0"
authors = ["Eugene Che <eugeneyche@gmail.com>"]

[dependencies]
actix-web = "0.7.13"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.5.13"
log = "0.4.0"
pulldown-cmark = "0.1.2"
slugify = "0.1.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
serde_yaml = "0.8.6"
walkdir = "2.2.5"
